Update placeholder text

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div="inputs">
       <form id="myForm" onsubmit="return validateForm()">
         <label for="fname">First Name</label>
-        <input type="text" id="fnameInput" name="firstname" placeholder="Your name..">
+        <input type="text" id="fnameInput" name="firstname" placeholder="Enter first name here">
         <span id="fnameError"></span>
         <label for="zip">ZIP Code</label>
-        <input type="text" id="zipInput" name="zip" placeholder="Your last name.." maxlength="5">
+        <input type="text" id="zipInput" name="zip" placeholder="Enter ZIP code here" maxlength="5">
         <span id="zipError"></span>
         <input type="submit" value="Submit">
         <span id="success"></span>
